# mini-key-value-db

./: .gitignore  1_motivation.html  2_database_api.html  404.html  Cargo.toml  README.md  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  mdbook.yml
chapter_1/: motivation.html
chapter_2/: database_api.html
chapter_3/: atomicity_and_isolation.html  core_concepts.html  dealing_with_anomalies.html  hybrid_logical_clock.html  interleave_txns.html  mvcc.html  read_refresh.html
chapter_4/: implementation_details.html  life_of_a_query.html
chapter_5/: concurrency_manager.html  deadlock_detection.html  implementation_details.html  latch_manager.html  life_of_a_query.html  lock_table.html  mvcc_implementation.html  request.html  timestamp_oracle.html
licenses/: cockroachdb.txt
mdbook/: book.toml
mdbook/src/: 1_motivation.md  SUMMARY.md  chapter_1.md
src/: build.rs  lib.rs  main.rs  rustyDB.rs
src/concurrency/: concurrency_manager.rs  mod.rs
src/db/: db.rs  db_test.rs  mod.rs  request_queue.rs  thread_pool.rs
src/execute/: executor.rs  executor_test.rs  mod.rs  request.rs  request_test.rs
src/helpers/: test_helpers.rs
src/hlc/: clock.rs  mod.rs  timestamp.rs
src/interval/: interval_tree.rs
src/interval_tree/: mod.rs
src/latch_manager/: latch_hash_table_impl.rs  latch_interval_btree.rs  latch_interval_btree_test.rs  latch_manager.rs  mod.rs  spanset.rs
src/llrb/: llrb.rs  mod.rs
src/lock_table/: lock_table.rs  lock_table_test.rs  mod.rs  scratch_test.rs
src/protos/: mvcc.proto  test.proto
(+54 files in other folders)
