[package]
name = "rustyDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
